package ar.utn.ba.ddsi.Metamapa.Datos;

public enum EstadoSolicitud {
    PENDIENTE,
    RECHAZADA,
    ACEPTADA
}
