package ar.utn.ba.ddsi.Metamapa.Datos.Filtros;


import ar.utn.ba.ddsi.Metamapa.Datos.Hecho;

public interface FiltroHecho
{   
  boolean aplicaA(Hecho hecho);
}
