package ar.utn.ba.ddsi.Metamapa.Datos;

public enum Origen {
  MANUAL,
  DATASET,
  CONTRIBUYENTE
}
