package ar.utn.ba.ddsi.Metamapa.Datos.Spam;

public interface DetectorDeSpam {
  boolean esSpam(String texto);

}